--- a/InversionBolsa/Memoria/Practica_01.tex
+++ b/InversionBolsa/Memoria/Practica_01.tex
@@ -34,16 +34,46 @@
     Por último, se ha llevado a cabo un proceso de validación y verificación intentando replicar las técnicas vistas en las sesiones de teoría.
 
     \subsection{Sesiones con el experto}
-    % TODO: Rellenar esto
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+    En total se produjeron tres reuniones con el experto: una en clase de teoría y dos en clases de prácticas. El conocimiento que faltaba para poder diseñar e implementar el sistema se extrajo del documento \emph{online} proporcionado por el experto.
+
+    En la primera sesión ---la producida en una clase de teoría, y en la que el experto actuó también de directivo y usuario---, se definieron de forma muy general las entradas y salidas del sistema, se indicaron las primeras tareas, como la detección de valores estables o peligrosos y se obtuvo una primera idea del razonamiento que el usuario quería ver cuando se le ofreciera una propuesta. Además, se dieron algunas pinceladas sobre lo que sería el funcionamiento del sistema final, como el apunte de que se mostraran las cinco mejores propuestas calculadas y de dónde había que obtener las variables de entrada.
+
+    En la segunda sesión, ya en una clase de prácticas, se detallaron de forma más precisa los módulos ---los módulos de detección de valores estables e inestables, de valores peligrosos, de valores sobrevalorados, de valores infravalorados y el módulo de gestión de la inversión---, estructura que se ha mantenido hasta el final. En concreto se dio una idea de cómo funcionaría el módulo de detección de valores peligrosos, indicando que las entradas serían los valores de la bolsa durante los últimos 5 días y cómo se han desplazado, las noticias y la cartera de acciones ---podemos ver cómo la estructura de las entradas se mantuvo casi completamente hasta el final--- y las salidas serían los valores peligrosos; además, se indicaron un par de reglas que formarían parte de este módulo.
+
+    En esta misma sesión se empezó además a definir la estructura global del sistema, con un esqueleto vacío que implementara ya la comunicación entre módulos, y se determinaron las estructuras de conocimiento con las que se trabajaría.
+
+    Por último, en la tercera sesión con el experto se definieron algunos conceptos bursátiles que los ingenieros del conocimiento desconocíamos, se dieron nuevas reglas y se discutió acerca de la idoneidad de tener el conocimiento por escrito ---de donde se obtuvo el documento \emph{online} que ha sido clave en el desarrollo del sistema---.
 
     \subsection{Procedimiento de validación y verificación}
-    % TODO: Rellenar esto
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+    El proceso de validación y verificación del sistema se ha realizado siguiendo las pautas vistas en las sesiones teóricas, intentando explotar al máximo las técnicas propias de ingeniería del conocimiento sin dejar de lado las técnicas generales de ingeniería del software que en ocasiones se podían aplicar.
+
+    Veamos paso por paso el procedimiento seguido.
+
+    \subsubsection*{Verificación}
+    El primer paso de este proceso ha sido la verificación; es decir, la comprobación de que el código implementado era correcto.
+
+    El estudio de la consistencia se ha hecho analizando el comportamiento de las reglas y cómo unas actuaban sobre otras, creando ejemplos ficticios para poder llegar a estados de conflicto. Lo único que se detectó en este caso fue un estado en el que convivían en la base de datos dos hechos del tipo \code{(Modulo $i$)} y \code{(Modulo $j$)}, con $i \neq j$, y se decidió trabajar con un único hecho siempre, que se modifica cuando se quiere cambiar de módulo.
+
+    Por otro lado, en el estudio de la sintaxis se detectó que muchos de los valores de los atributos de las empresas no estaban bien expresados, como en el caso de los valores \code{DISPONIBLE} y \code{GRANDE}, que hasta ese momento se estaban usando en minúscula y hacían que ninguna de las reglas que lo contenían se ejecutara.
+
+    La completitud se analizó comparando el documento \emph{online} dado por el experto con el código, haciendo de nuevo casos de prueba para detectar algún fallo. En esta fase no se detectó nada y, tras un estudio exhaustivo del documento se concluyó que el sistema era completo.
+
+    \subsubsection*{Validación}
+    El último paso de este proceso ha sido la validación; es decir, la comprobación de que el código implementado, además de ser correcto, cumple con las necesidades del usuario.
+
+    En un primer momento se ha realizado un proceso de validación objetiva, en el que se ha analizado cada una de las reglas implementadas para asegurarnos de que cumplían con lo dictado por el experto ---en este caso, con lo descrito en el documento \emph{online}---.
+
+    Para llevar a cabo esta tarea se han hecho tests unitarios para comprobar que las reglas cumplían con toda la casuística considerada: se han añadido a la cartera valores ficticios que cumplieran con las hipótesis, otros que no lo hicieran e intentando buscar casos extremos que pudieran hacer ver un mal funcionamiento del sistema, como puede ser el caso de la compra de más acciones de las que podemos pagar o de la venta de un número negativo de acciones. Se ha intentado aquí también estudiar la jerarquía entre las reglas, analizando cuáles se ejecutaban primero y si esto producía algún error. Con esta técnica se pudo comprobar, por ejemplo, que las noticias positivas no tenían más poder que las negativas; esto se cambió convenientemente asignando prioridades a las reglas.
+
+    Además, se ha estudiado la implementación y se ha analizado su modularidad, estudiando la facilidad de mantenimiento y la claridad del código. En esta fase se pulieron muchos detalles, intentando encapsular todo lo posible las reglas y los métodos para que fueran reutilizables y claros.
+
+    Por último, se ha llevado a cabo una validación interpretativa, en la que se ha actuado como usuarios con distintas necesidades para poder pulir la interacción con los mismos ---como no teníamos acceso a los usuarios finales, la valoración de estos aspectos ha sido llevada a cabo por el ingeniero del conocimiento, buscando siempre la máxima facilidad de uso---. Se han buscado así errores que no se vieron en la fase anterior ---de casos muy concretos, como la posibilidad de comprar acciones de un valor que ya teníamos en la cartera--- y modificando pequeños aspectos de usabilidad e interacción.
 
     \section{Descripción detallada del sistema}
 
-    En esta sección vamos a analizar detenidamente el funcionamiento del sistema, los módulos que lo forman, cómo interactúan entre ellos y las reglas que conforman el razonamiento.
+    En esta sección vamos a analizar detenidamente el funcionamiento del sistema, los módulos que lo forman, cómo interactúan entre ellos y las reglas que conforman el razonamiento, teniendo siempre en cuenta que se ha seguido una representación y un razonamiento simbólicos.
 
     \subsection{Variables de entrada del problema}
     \label{ch:varEntrada}
