Pequeño fallo en la imagen

--- a/InversionBolsa/Memoria/Practica_01.tex
+++ b/InversionBolsa/Memoria/Practica_01.tex
@@ -29,7 +29,7 @@
     \begin{center}
         \begin{figure}[!htb]
             \centering
-            \includegraphics[width=1.5\textwidth]{00-DiagramaSistema.png}
+            \includegraphics[width=\textwidth]{00-DiagramaSistema.png}
             \caption{Diagrama general del sistema.}
             \label{fig:diagrama}
         \end{figure}
